# syslog-ng

dev-utils/: syslog-ng.conf
lib/: cfg.c  cfg.h  logsource.c  logsource.h
lib/tests/: Makefile.am  test_timeutils.c
modules/: Makefile.am
modules/afsocket/: afsocket-dest.c
modules/generator-source/: CMakeLists.txt  Makefile.am  generator-source-driver.c  generator-source-driver.h  generator-source-grammar.ym  generator-source-options.c  generator-source-options.h  generator-source-parser.c  generator-source-parser.h  generator-source-plugin.c  generator-source.c  generator-source.h
tests/unit/: test_msgparse.c
